BE: add pill endpoint
